--- a/webpage_code/index.html
+++ b/webpage_code/index.html
@@ -1,16 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SweetTrivia - Create Beautiful Trivia Questions</title>
-    <meta name="description" content="Create, manage, and export your own trivia questions with SweetTrivia" />
-    <meta name="author" content="SweetTrivia" />
+    <title>sweetrivia-questor</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
